The problem that the position where tag is displayed shifts is corrected.

--- a/skin/css/fusen.css
+++ b/skin/css/fusen.css
@@ -1,4 +1,10 @@
 /* fusen.inc.php */
+$class div#fusen_container {
+	position: absolute;
+	top : 0;
+	left: 0;
+}
+
 $class div#fusen_area
 {
 	margin: 0px;
